web/themes/custom/govcon/components/organisms/header/header.scss
@use '@atoms/colors/color.scss' as color;
@use '@base/mixins.scss' as mixins;
@use '@molecules/menu/menu.scss';

$button-offset: 4px;

header {
  z-index: 401;
  top: 0;
  position: sticky;
  width: 100%;
  transition: all 0.3s ease-in-out;

  &:has(.sticky-header) {
    position: fixed;
    top: 0;

    +main {
      margin-top: 13rem;
    }
  }
}

.has-background-image {
  .site-header {
    max-width: 1368px;
    background: rgba(244, 250, 255, 0.6);
    box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    margin: 16px auto 0;

    .header__menu:not(.open) {
      a.button.secondary {
        box-shadow: inset $button-offset $button-offset 0px rgb(169 187 203), $button-offset $button-offset 0px color.$secondary;

        &:hover {
          box-shadow: inset 0px 0px;
        }
      }
    }

    &.header-color {
      background: rgb(165 185 200);
    }

    @include mixins.media-breakpoint-down(md) {
      margin: 0 auto;
    }
  }
}

.site-header {
  background: color.$light;
  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
  padding: 20px 0 0;

  .header__branding {
    padding-bottom: 20px;
  }

  img {
    max-width: 216px;
    transition: all 0.3s ease;
  }

  &.sticky-header {
    padding-top: 12px;
    margin-top: 0;

    img {
      max-width: 180px;
    }

    li {
      padding-top: 16px;
      padding-bottom: 18px;
    }

    ul.dropdown-menu {
      top: 60px;
    }
  }

  .hamburger {
    display: none;
  }
}

@include mixins.media-breakpoint-down(lg) {
  .site-header {
    box-shadow: unset;

    img {
      width: 120px;
      height: auto;
    }

    .header__menu {
      position: fixed;
      top: 0;
      left: -100%;
      width: 100%;
      height: 100vh;
      background: color.$white;
      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
      padding: 20px;
      transition: left 0.3s ease-in-out;
      z-index: 1000;
    }

    .header__menu.open {
      left: 0;
      overflow: scroll;
    }

    .hamburger {
      display: block;
      background: none;
      border: none;
      cursor: pointer;
      z-index: 1100;

      span {
        display: block;
        width: 64px;
        height: 6px;
        border-radius: 4px;
        background: color.$primary-dark;
        margin: 7px 0;
        transition: transform 0.3s ease;
      }

      &.active {
        span:nth-child(1) {
          transform: translateY(11px) rotate(45deg);
        }

        span:nth-child(2) {
          opacity: 0;
          visibility: hidden;
        }

        span:nth-child(3) {
          transform: translateY(-14px) rotate(-45deg);
        }
      }
    }

    nav ul:not(.contextual-links) {
      display: block;
      text-align: left;

      li {
        margin: 20px auto;
        padding: 0;
      }
    }
  }
}

